feat: [002-SIGN_UP&IN] 매니저, 고객 회원가입 및 로그인 기능 구현
회원가입은 인증없이 진행하였고,
로그인 인증은 jwt 토큰을 이용하였습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
   # Database Setting Info
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test1
+    url: jdbc:h2:~/test9
     username: sa
     password:
 
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
         show_sql: true
